--- a/desafios/d012/style/estilo.css
+++ b/desafios/d012/style/estilo.css
@@ -1,7 +1,14 @@
 @charset 'UTF-8';
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
 :root {
-    --cor1: #00000071;
+    --cor1: #00000085;
+    --fonte-padrao: Calibri, Arial, Helvetica, sans-serif;
+    --fonte-titulo: 'Passion One', cursive;
+    --fonte-texto: 'Sriracha', cursive;
 }
 
 * {
@@ -12,33 +19,25 @@
 html, body {
     min-height: 100vh;
     background-color: darkgray;
-    font-family: Calibri, Arial, Helvetica, sans-serif;
+    font-family: var(--fonte-padrao);
 }
 
 header {
-    position: relative;
     background-color: black;
-    height: 200px;
-    padding: 30px 0px;
     text-align: center;
     color: white;
 }
 
-section#titulo {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-
-header h1 {
+header > h1 {
+    padding-top: 50px;
+    font-family: var(--fonte-titulo);
     /* text-transform: uppercase; *//* -> transforma todas as letras em maiúsculas */
     font-variant: small-caps; /* -> transforma todas as letras em maiúsculas, modificando apenas o tamanho */
-    font-size: 4em;
+    font-size: 10vw;
 }
 
-header p {
-    font-size: 1.2em;
+header > p {
+    padding-bottom: 50px;
 }
 
 header a, footer a {
@@ -52,8 +51,14 @@ header a:hover, footer a:hover {
 }
 
 section {
+    font-family: var(--fonte-texto);
+    font-size: 1.5em;
     padding: 10vh 0px 10vh 30px;
     line-height: 2em;
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -62,22 +67,20 @@ section.normal {
 }
 
 section.imagem {
-    /* position: relative; */
     background-color: black;
+    box-shadow: inset 6px 6px 13px 0px #00000071;
+    text-shadow: 2px 2px 2px #000000b7;
     color: white;
-    /* height: 500px; */
 }
 
 section.imagem > p {
-    /* position: absolute; */
+    display: inline-block;
     background-color: var(--cor1);
-    /* left: 5%; */
-    /* top: 50%; */
-    /* transform: translate(0%, -50%); */
+    padding: 7px;
 }
 
 section#img1 {
-    background: url('../imgs/background001.jpg') center center no-repeat fixed;
+    background: url('../imgs/background001.jpg') right center no-repeat fixed;
     background-size: cover;
 }
 
