--- a/exercicios/ex026/mq001/styles/tela.css
+++ b/exercicios/ex026/mq001/styles/tela.css
@@ -13,3 +13,44 @@ html {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
 }
+
+header {
+    background-image: linear-gradient(to bottom, lightgray, gray 50%);
+}
+
+header h1 {
+    text-align: center;
+    padding: 10px;
+}
+
+menu {
+    background-color: gray;
+    padding: 5px;
+}
+
+menu li {
+    list-style-type: none;
+    display: inline-block;
+    padding: 5px;
+    margin: 0px 5px;
+    font-weight: bold;
+    color: white;
+}
+
+main {
+    display: block;
+    margin: auto;
+    max-width: 600px;
+    padding: 10px;
+}
+
+main h2 {
+    margin: 10px 0px;
+}
+
+main p {
+    margin-bottom: 15px;
+    text-align: justify;
+    text-indent: 1.5em;
+    line-height: 1.2em;
+}
