Utilização das Media Features

--- a/exercicios/ex026/mq002/styles/paisagem.css
+++ b/exercicios/ex026/mq002/styles/paisagem.css
@@ -3,3 +3,8 @@
 /* 
     Dispositivo na horizontal (paisagem)
 */
+
+body {
+    background: url('../../imgs/cev-landscape.jpg') center bottom no-repeat fixed;
+    background-size: contain;
+}
