--- a/exercicios/ex026/mq002/styles/retrato.css
+++ b/exercicios/ex026/mq002/styles/retrato.css
@@ -3,3 +3,8 @@
 /* 
     Dispositivo vertical (retrato)
 */
+
+body {
+    background: url('../../imgs/cev-portrait.jpg') center bottom no-repeat fixed;
+    background-size: contain;
+}
