--- a/exercicios/ex026/mq002/styles/estilo.css
+++ b/exercicios/ex026/mq002/styles/estilo.css
@@ -3,3 +3,21 @@
 /* 
     Configurações gerais
 */
+
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #233EFF;
+}
+
+h1 {
+    color: white;
+    text-shadow: 1px 1px 3px black;
+    padding: 10px;
+}
