--- a/exercicios/ex026/mq004/styles/media-query.css
+++ b/exercicios/ex026/mq004/styles/media-query.css
@@ -3,3 +3,65 @@
 /* 
     Demais mídias
 */
+
+/* 
+    Typical Device Breakpoints
+
+    - Telas pequenas: até 600px; 
+    - Celulares: 600px - 768px;
+    - Tablets: 768px - 992px;
+    - Desktops: 992px - 1200px;
+    - Telas grandes: acima de 1200px.
+*/
+
+@media print { /* Versão para impressão */
+
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) { /* Versão para tablets */
+    body {
+        background-image: url('../../imgs/back-tablet.jpg');
+    }
+
+    img#celular { display: none; }
+
+    img#tablet { display: block; }
+
+    img#impressora { display: none; }
+
+    img#pc { display: none; }
+
+    img#tv { display: none; }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) { /* Versão para desktops */
+    body {
+        background-image: url('../../imgs/back-pc.jpg');
+    }
+
+    img#celular { display: none; }
+
+    img#tablet { display: none; }
+
+    img#impressora { display: none; }
+
+    img#pc { display: block; }
+
+    img#tv { display: none; }
+}
+
+@media screen and (min-width: 1200px) { /* Versão para telas grandes */
+    body {
+        background-image: url('../../imgs/back-tv.jpg');
+    }
+
+    img#celular { display: none; }
+
+    img#tablet { display: none; }
+
+    img#impressora { display: none; }
+
+    img#pc { display: none; }
+
+    img#tv { display: block; }
+}
