--- a/exercicios/ex026/mq004/styles/estilo.css
+++ b/exercicios/ex026/mq004/styles/estilo.css
@@ -23,7 +23,7 @@ body {
 
 main {
     background: rgba(255, 255, 255, 0.747);
-    width: 450px;
+    min-width: 450px;
     margin: auto;
     margin-top: 20px;
     border-radius: 10px;
