--- a/exercicios/ex026/mq004/styles/media-query.css
+++ b/exercicios/ex026/mq004/styles/media-query.css
@@ -15,7 +15,37 @@
 */
 
 @media print { /* Versão para impressão */
+    * {
+        font-family: 'Courier New', Courier, monospace;
+    }
 
+    body {
+        background-image: url('../../imgs/back-print.jpg'); /* [DESNECESSÁRIO] */
+    }
+
+    main {
+        border: 2px solid black;
+    }
+
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    main::after {
+        content: 'Esta impressão foi feita através do site andre-f-alves.github.io';
+        text-decoration: overline;
+    }
+
+    img#celular { display: none; }
+
+    img#tablet { display: none; }
+
+    img#impressora { display: block; }
+
+    img#pc { display: none; }
+
+    img#tv { display: none; }
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px) { /* Versão para tablets */
