--- a/exercicios/ex026/mq005/styles/estilo.css
+++ b/exercicios/ex026/mq005/styles/estilo.css
@@ -19,8 +19,22 @@ header > h1 {
     text-align: center;
 }
 
-menu {
+#icone-menu {
+    background-color: #333333;
+    color: white;
     display: block;
+    text-align: center;
+    padding: 5px;
+    cursor: pointer;
+}
+
+#icone-menu:hover {
+    background-color: white;
+    color: black;
+}
+
+menu {
+    display: none;
 }
 
 menu > ul {
@@ -38,7 +52,7 @@ menu a {
 }
 
 menu a:hover {
-    background-color: #646464;
+    background-color: #777777;
 }
 
 main {
